Fix lint suggestions